# rl-games-server

./: .gitignore  README.md  go.mod  main.go  pyproject.toml
games/: games.go
games/connect4/: connect4.go
src/: connect4.py  go.mod  main.go  pyproject.toml
src/games/: go.mod
src/games/connect4/: connect4.go  go.mod
tests/: test_connect4_state.py  test_connect4_win.py
