[tool.poetry]
name = "rl-games-server"
version = "0.1.0"
description = ""
authors = ["rcskinner <ryan.skinner@datadoghq.com>"]
readme = "README.md"
packages = [ 
    { include = "./src"},
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.2"
setuptools = "^69.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
